<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.example</groupId>
    <artifactId>microservices</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>


    <modules>
        <module>chat-service</module>
        <module>user-service</module>
        <module>eureka</module>
        <module>gateway</module>
<!--        <module>eureka-server</module>-->
<!--        <module>config-server</module>-->
    </modules>
    <dependencies>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
            <version>6.2.11</version>
            <scope>compile</scope>
        </dependency>
    </dependencies><build><plugins><plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-compiler-plugin</artifactId><configuration><source>5</source><target>5</target><compilerArgs>--enable-preview</compilerArgs></configuration></plugin></plugins></build>
</project>
